# Assiut-University-Training---Newcomers

Assiut_Sheet #2 (Loops)/: A. 1 to N.cpp  B. Even Numbers.cpp  C. Even, Odd, Positive and Negative.cpp  CMakeLists.txt  D. Fixed Password.cpp  E. Max.cpp  F. Multiplication table.cpp  G. Factorial.cpp  H. One Prime again.cpp  H. One Prime.cpp  I. Palindrome.cpp  J. Primes from 1 to n.cpp  K. Divisors.cpp  L. GCD.cpp  M. Lucky Numbers.cpp  N. Numbers Histogram.cpp  O. Pyramid.cpp  P. Shape1.cpp  Q. Digits.cpp  R. Sequence of Numbers and Sum.cpp  S. Sum of Consecutive Odd Numbers.cpp  T. Shape2.cpp  U. Some Sums.cpp  V. PUM .cpp  W. Shape3.cpp  X. Convert To Decimal 2.cpp  Y. Easy Fibonacci.cpp  Z. Three Numbers.cpp
Assuit_Sheet #3 (Arrays)/: A. Summation.cpp  B. Searching.cpp  C. Replacement.cpp  CMakeLists.txt  D. Positions in array.cpp  E. Lowest Number.cpp  F. Reversing.cpp  G. Palindrome Array.cpp  H. Sorting.cpp  I. Smallest Pair.cpp  J. Lucky Array.cpp  K. Sum Digits.cpp  L. Max Subarray.cpp  M. Replace MinMax.cpp  N. Check Code.cpp  O. Fibonacci.cpp  P. Minimize Number.cpp  Q. Count Subarrays.cpp  R. Permutation with arrays.cpp  S. Search In Matrix.cpp  T. Matrix.cpp  U. Is B a subsequence of A .cpp  V. Frequency Array.cpp  W. Mirror Array.cpp  X. 8 Neighbors.cpp  Y. Range sum query.cpp  Z. Binary Search.cpp
Assuit_sheet4_string/: A. Create A New String.cpp  B. Let's use Getline.cpp  C. Compare.cpp  CMakeLists.txt  D. Strings.cpp  E. Count.cpp  F. Way Too Long Words.cpp  G. Conversion.cpp  H. Good or Bad.cpp  I. Palindrome.cpp  J. Count Letters.cpp  K. I Love strings.cpp  M. Subsequence String.cpp  N. Max Subsequence.cpp  O. Sort String.cpp  P. Count Words.cpp  Q. Reverse Words.cpp  S. Max Split.cpp  T. URL.cpp  U. New Words.cpp  V. Replace Word.cpp  W. Encrypt & Decrypt Message.cpp  X. Comparison.cpp  Y. Min Cost String.cpp
Contest #1 — (Data types - Control Flows)-ICPC SCU Newcomers Contests '22/: A. Bojack the Horseman.cpp  A. Christmas gifts #loops.cpp  A. Concatenation.cpp  A. Tokyo Revengers.cpp  A. Welcome in Çukur.cpp  B. Amr Diab Party.cpp  B. Card Game.cpp  B. Crossover and Straight through.cpp  B. Hating Odd Numbers.cpp  B. My Hero Academia.cpp  C. Ashour and arrows.cpp  C. Geometry.cpp  C. Good or Bad.cpp  C. Morty's Disease.cpp  C. Naruto.cpp  CMakeLists.txt  D. Chessboard.cpp  D. Driver's Salary.cpp  D. MeMo and geometry.cpp  D. SpongeBob and 3 .cpp  D. Sword art online.cpp  E. Digits palindromes.cpp  E. Encrypted Password.cpp  E. Is it easy.cpp  E. Kevin and sum.cpp  E. Play With Us.cpp  F. Akame ga kill.cpp  F. Odd and Even Count.cpp  F. Perfect Dishes.cpp  G. 8 Ball Pool.cpp  G. Pineapple Pizza.cpp
Contest #2_UPsolve_Assuit_Newcomers/: A. Timon and Pumbaa.cpp  B. Drawing 'X'.cpp  C. Finding Minimums.cpp  CMakeLists.txt  D. Range Sum.cpp  E. Hady Rides the Train.cpp  F. Break Number.cpp  G. Construct the Sum.cpp  H. Simple Mod.cpp
Contest #3.1 #assuit/: A. Square or rectangle.cpp  B. Reversing.cpp  C. Choose Elements.cpp  CMakeLists.txt  D. Counting Elements.cpp  F. Front - End.cpp  G. Even Hate Odd.cpp
Sheet #10 (General Hard)/: A. Chewbaсca and Number.cpp  A. Palindromes Replace.cpp  C. Koko And The Transformation.cpp  CMakeLists.txt  D. Hussien and Strings.cpp  E. Construct The Sum.cpp  F. Marks.cpp  G. Smallest Product.cpp  I. Coins.cpp  J. Help Vasilisa the Wise 2.cpp  K. Snacktower.cpp  L. Two Squares.cpp  M. Postcard.cpp  N. Katryoshka.cpp  O. Help Koko.cpp  P. No Time for Dragons.cpp  Q. Bulbs.cpp  R. Cut Ribbon.cpp  S. DZY Loves Chessboard.cpp  T. Easter Eggs.cpp  U. From S To T.cpp  V. New Password.cpp  W. Hussien and Arrays 2.cpp  X. Strange Addition.cpp  Y. Spiral.cpp  Z. Triangle.cpp
Sheet #6 (Math - Geometry)/: CMakeLists.txt  O. Big Add and Multiply.cpp
Sheet #6 (Math - Geometry)-Assiut/: @suez Z. Digits Sum.cpp  A. Power Of Two.cpp  B. Prime checking.cpp  C. Sum of Range.cpp  CMakeLists.txt  D. Xor.cpp  E. Maximum Distinct Numbers.cpp  F. Multiplication of Matrices.cpp  G. Summation of its divisors.cpp  H. GCD.cpp  I. Divisability.cpp  J. Prime Factors.cpp  K. Combination and Permutation.cpp  L. Pascal Triangle.cpp  M. Divisible.cpp  N. Convert to Base.cpp  O. Big Add and Multiply.cpp  P. Factorial Digits.cpp  Q. Product.cpp  R. Distance points.cpp  S. Is Triangle.cpp  T. Circle Task.cpp  U. Straight Line.cpp  V. Two Lines.cpp  W. Circles.cpp  X. Rectangle.cpp  Y. Common Area.cpp  Z. Geometry Test.cpp
Sheet #8 (General easy)/: A. Palindromes Replace.cpp  C. Koko And The Transformation.cpp  CMakeLists.txt  I. Colorful Stones (Simplified Edition).cpp  J. Lucky Division.cpp  K. Prime Fibonacci.cpp  M. The New Year Meeting Friends.cpp  N. Cakeminator.cpp  Q. Night at the Museum.cpp  R. Arrival of the General.cpp  S. Good Number.cpp  U. Ilya and Bank Account.cpp  W. Mahmoud and Longest Uncommon Subsequence.cpp  X. Panoramix's Prediction.cpp  Y. Team Olympiad.cpp  Z. Decoding.cpp
Sheet #9 (General medium)_assuit/: A. Polo the Penguin and Segments.cpp  CMakeLists.txt  D. Juicer.cpp  F. Puzzles.cpp  G. Twins.cpp  H. Launch of Collider.cpp  I. Lineland Mail.cpp  J. Shaass and Oskols.cpp  O. Yaroslav and Permutations.cpp  Q. Dreamoon and Stairs.cpp  R. Ksenia and Pan Scales.cpp  S. Mahmoud and a Triangle.cpp  T. Olesya and Rodion.cpp  U. T-primes.cpp  V. Balanced Rating Changes.cpp  W. Football.cpp  X. Mountain Scenery.cpp
rest_of_Sheet #4 (Strings)/: CMakeLists.txt  L. String Functions.cpp  R. String Score.cpp  S. Max Split.cpp  Y. Min Cost String.cpp  Z. Clean Code.cpp
rest_of_Sheet #8 (General easy)/: B. Watermelon.cpp  CMakeLists.txt  D. Bear and Big Brother.cpp  E. George and Accommodation.cpp  G. Magnets.cpp  H. Presents.cpp  L. Sereja and Dima.cpp  O. Free Ice Cream.cpp  P. Police Recruits.cpp  T. Helpful Maths.cpp  V. Is it rated.cpp
