cmake_minimum_required(VERSION 3.19)
project(Assiut_Sheet__2__Loops_)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assiut_Sheet__2__Loops_ main.cpp "A. 1 to N.cpp" "B. Even Numbers.cpp" "C. Even, Odd, Positive and Negative.cpp" "D. Fixed Password.cpp" "E. Max.cpp" "F. Multiplication table.cpp" "O. Pyramid.cpp" "G. Factorial.cpp" "K. Divisors.cpp" "P. Shape1.cpp" "H. One Prime.cpp" "V. PUM .cpp" "H. One Prime again.cpp" "S. Sum of Consecutive Odd Numbers.cpp" "L. GCD.cpp" "R. Sequence of Numbers and Sum.cpp" "T. Shape2.cpp" "W. Shape3.cpp" "Y. Easy Fibonacci.cpp" "U. Some Sums.cpp" "N. Numbers Histogram.cpp" "I. Palindrome.cpp" "Q. Digits.cpp" "J. Primes from 1 to n.cpp" "M. Lucky Numbers.cpp" "Z. Three Numbers.cpp" "X. Convert To Decimal 2.cpp")