cmake_minimum_required(VERSION 3.19)
project(Assuit_Sheet__3__Arrays_)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assuit_Sheet__3__Arrays_ main.cpp "C. Replacement.cpp" "D. Positions in array.cpp" "A. Summation.cpp" "B. Searching.cpp" "F. Reversing.cpp" "E. Lowest Number.cpp" "H. Sorting.cpp" "J. Lucky Array.cpp" "M. Replace MinMax.cpp" "K. Sum Digits.cpp" "O. Fibonacci.cpp" "S. Search In Matrix.cpp" "L. Max Subarray.cpp" "Q. Count Subarrays.cpp" "N. Check Code.cpp" "G. Palindrome Array.cpp" "I. Smallest Pair.cpp" "Z. Binary Search.cpp" "T. Matrix.cpp" "W. Mirror Array.cpp" "V. Frequency Array.cpp" "Y. Range sum query.cpp" "P. Minimize Number.cpp" "X. 8 Neighbors.cpp" "R. Permutation with arrays.cpp" "U. Is B a subsequence of A .cpp")