cmake_minimum_required(VERSION 3.19)
project(Assuit_sheet4_string)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assuit_sheet4_string main.cpp "B. Let's use Getline.cpp" "C. Compare.cpp" "D. Strings.cpp" "E. Count.cpp" "F. Way Too Long Words.cpp" "I. Palindrome.cpp" "A. Create A New String.cpp" "K. I Love strings.cpp" "J. Count Letters.cpp" " H. Good or Bad.cpp" "G. Conversion.cpp" "X. Comparison.cpp" "M. Subsequence String.cpp" "N. Max Subsequence.cpp" "Q. Reverse Words.cpp" "Y. Min Cost String.cpp" "O. Sort String.cpp" "V. Replace Word.cpp" "U. New Words.cpp" "T. URL.cpp" "W. Encrypt & Decrypt Message.cpp" "S. Max Split.cpp" "P. Count Words.cpp")