cmake_minimum_required(VERSION 3.19)
project(Contest__1___Data_types___Control_Flows__ICPC_SCU_Newcomers_Contests__22)

set(CMAKE_CXX_STANDARD 17)

add_executable(Contest__1___Data_types___Control_Flows__ICPC_SCU_Newcomers_Contests__22 main.cpp "A. Welcome in Çukur.cpp" "D. SpongeBob and 3 .cpp" "C. Good or Bad.cpp" "E. Play With Us.cpp" "B. Crossover and Straight through.cpp" "F. Perfect Dishes.cpp" "A. Christmas gifts #loops.cpp" "B. Amr Diab Party.cpp" "D. Driver's Salary.cpp" "C. Geometry.cpp" "F. Odd and Even Count.cpp" "E. Is it easy.cpp" "G. 8 Ball Pool.cpp" "A. Bojack the Horseman.cpp" "B. Hating Odd Numbers.cpp" "C. Morty's Disease.cpp" "G. Pineapple Pizza.cpp" "D. Chessboard.cpp" "E. Kevin and sum.cpp" "B. My Hero Academia.cpp" "F. Akame ga kill.cpp" "A. Tokyo Revengers.cpp" "D. Sword art online.cpp" "C. Naruto.cpp" "E. Encrypted Password.cpp" "A. Concatenation.cpp" "C. Ashour and arrows.cpp" "D. MeMo and geometry.cpp" "E. Digits palindromes.cpp" "B. Card Game.cpp")