cmake_minimum_required(VERSION 3.19)
project(Contest__2_UPsolve_Assuit_Newcomers)

set(CMAKE_CXX_STANDARD 17)

add_executable(Contest__2_UPsolve_Assuit_Newcomers main.cpp "A. Timon and Pumbaa.cpp" "C. Finding Minimums.cpp" "B. Drawing 'X'.cpp" "D. Range Sum.cpp" "E. Hady Rides the Train.cpp" "F. Break Number.cpp" "H. Simple Mod.cpp" "G. Construct the Sum.cpp")