cmake_minimum_required(VERSION 3.19)
project(Sheet__10__General_Hard_)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sheet__10__General_Hard_ main.cpp "F. Marks.cpp" "A. Chewbaсca and Number.cpp" "I. Coins.cpp" "R. Cut Ribbon.cpp" "N. Katryoshka.cpp" "M. Postcard.cpp" "D. Hussien and Strings.cpp" "E. Construct The Sum.cpp" "G. Smallest Product.cpp" "L. Two Squares.cpp" "C. Koko And The Transformation.cpp" "K. Snacktower.cpp" "A. Palindromes Replace.cpp" "J. Help Vasilisa the Wise 2.cpp" "S. DZY Loves Chessboard.cpp" "T. Easter Eggs.cpp" "V. New Password.cpp" "Q. Bulbs.cpp" "Z. Triangle.cpp" "X. Strange Addition.cpp" "Y. Spiral.cpp" "P. No Time for Dragons.cpp" "U. From S To T.cpp" "W. Hussien and Arrays 2.cpp" "O. Help Koko.cpp")