cmake_minimum_required(VERSION 3.19)
project(Sheet__6__Math___Geometry__Assiut)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sheet__6__Math___Geometry__Assiut main.cpp "A. Power Of Two.cpp" "D. Xor.cpp" "E. Maximum Distinct Numbers.cpp" "B. Prime checking.cpp" "G. Summation of its divisors.cpp" "H. GCD.cpp" "I. Divisability.cpp" "Q. Product.cpp" "M. Divisible.cpp" "P. Factorial Digits.cpp" "R. Distance points.cpp" "U. Straight Line.cpp" "V. Two Lines.cpp" "Z. Geometry Test.cpp" "K. Combination and Permutation.cpp" "Y. Common Area.cpp" "S. Is Triangle.cpp" "L. Pascal Triangle.cpp" "C. Sum of Range.cpp" "F. Multiplication of Matrices.cpp" "J. Prime Factors.cpp" "X. Rectangle.cpp" "O. Big Add and Multiply.cpp" "T. Circle Task.cpp" "W. Circles.cpp" "@suez Z. Digits Sum.cpp" "N. Convert to Base.cpp")