cmake_minimum_required(VERSION 3.19)
project(Sheet__8__General_easy_)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sheet__8__General_easy_ main.cpp "C. Koko And The Transformation.cpp" "J. Lucky Division.cpp" "M. The New Year Meeting Friends.cpp" "R. Arrival of the General.cpp" "A. Palindromes Replace.cpp" "I. Colorful Stones (Simplified Edition).cpp" "K. Prime Fibonacci.cpp" "S. Good Number.cpp" "U. Ilya and Bank Account.cpp" "X. Panoramix's Prediction.cpp" "Z. Decoding.cpp" "Y. Team Olympiad.cpp" "W. Mahmoud and Longest Uncommon Subsequence.cpp" "Q. Night at the Museum.cpp" "N. Cakeminator.cpp")