cmake_minimum_required(VERSION 3.19)
project(Sheet__9__General_medium__assuit)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sheet__9__General_medium__assuit main.cpp "W. Football.cpp" "V. Balanced Rating Changes.cpp" "X. Mountain Scenery.cpp" "U. T-primes.cpp" "A. Polo the Penguin and Segments.cpp" "T. Olesya and Rodion.cpp" "S. Mahmoud and a Triangle.cpp" "Q. Dreamoon and Stairs.cpp" "R. Ksenia and Pan Scales.cpp" "O. Yaroslav and Permutations.cpp" "J. Shaass and Oskols.cpp" "D. Juicer.cpp" "F. Puzzles.cpp" "G. Twins.cpp" "H. Launch of Collider.cpp" "I. Lineland Mail.cpp")