cmake_minimum_required(VERSION 3.19)
project(rest_of_Sheet__8__General_easy_)

set(CMAKE_CXX_STANDARD 17)

add_executable(rest_of_Sheet__8__General_easy_ main.cpp "L. Sereja and Dima.cpp" "O. Free Ice Cream.cpp" "P. Police Recruits.cpp" "T. Helpful Maths.cpp" "V. Is it rated.cpp" "B. Watermelon.cpp" "D. Bear and Big Brother.cpp" "E. George and Accommodation.cpp" "G. Magnets.cpp" "H. Presents.cpp")